apps/base/nitter/nitter-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nitter-ingress
  namespace: default
  annotations:
    spec.ingressClassName: traefik
    cert-manager.io/issuer: nohost-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-ratelimit@kubernetescrd
spec:
  rules:
  - host: nitter.nohost.network
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nitter-svc
            port:
              number: 80
  tls:
  - hosts:
    - nitter.nohost.network
    secretName: nitter-cert
